Style/alignment fixes

--- a/Styles/dropdownStyles.css
+++ b/Styles/dropdownStyles.css
@@ -5,14 +5,18 @@
 }
 
 .icon-dropdown-button {
-    margin: 0 5px 2px 3px;
-    height: 30px;
+    margin: 3px 5px 2px 3px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .icon-dropdown-option-icon {
+    margin-left: 4px;
+    height: 21px;
+}
+
+.icon-dropdown-button {
     height: 25px;
 }
 
@@ -38,7 +42,7 @@
     overflow-y: scroll;
     overscroll-behavior: contain;
     max-height: 400px;
-    width: 200px;
+    width: 204px;
     z-index: 100;
 }
 
@@ -61,6 +65,7 @@
 .icon-dropdown-option-container {
     height: 25px;
     display: flex;
+    align-items: center;
 	color: white;
 	background-color: black;
 }
